[project]
name = "akl-perils-3d"
version = "0.1.0"
description = "Auckland building stock in 3D vs flood hazard - open data proof of concept"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "rasterstats>=0.19",
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "requests>=2.32",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
